# claude-transcript-viewer-v2

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierignore  DEVELOPMENT.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  SETUP_COMPLETE.md  TESTING.md  TEST_REPORT.json  TEST_RESULTS.json  dev.sh  docker-compose.yml  justfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
backend/: .dockerignore  .env.example  .eslintrc.cjs  .eslintrc.json  Cargo.toml  Dockerfile  README.md  db.go  db_test.go  go.mod  go.sum  main.go  package-lock.json  package.json  s3-download.mjs  s3.go  s3_integration_test.go  s3_test.go  seed.go  seed_test.go  server.go  server_test.go  static.go  static_test.go  store.go  store_test.go  tsconfig.json  types.go  vitest.config.ts  vitest.integration.config.ts
backend/src/: app.rs  app.ts  config.rs  error.rs  index.ts  lib.rs  main.rs  models.rs  server.js  server.ts
backend/src/routes/: mod.rs  transcript.ts  transcripts.rs  transcripts.test.ts  transcripts.ts
backend/src/routes/__tests__/: transcript.test.ts
backend/src/services/: mod.rs  s3.integration.test.ts  s3.rs  s3.service.ts  s3.test.ts  s3.ts  test_fixtures.rs
backend/src/services/__tests__/: s3.service.test.ts
backend/src/types/: index.ts
backend/tests/: integration.rs  s3_service.rs  transcripts_api.rs
docs/: transcript-viewer-doc-tracker.md  transcript-viewer-prd-deployment.md  transcript-viewer-prd-lifecycle.md  transcript-viewer-prd-lookup.md  transcript-viewer-prd-session-list.md  transcript-viewer-prd-viewer.md  transcript-viewer-test-deployment.md  transcript-viewer-test-lifecycle.md  transcript-viewer-test-lookup.md  transcript-viewer-test-session-list.md  transcript-viewer-test-viewer.md  transcript-viewer-values.md
e2e/: .env.example  README.md  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
fixtures/: main-transcript.jsonl  subagent-transcript.jsonl
(+164 files in other folders)
