[package]
name = "claude-transcript-viewer-backend"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "claude-transcript-viewer-backend"
path = "src/main.rs"

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
hyper = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
aws-credential-types = "1"
aws-smithy-runtime-api = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
