[package]
name = "claude-transcript-viewer-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-transcript-viewer-backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
aws-credential-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.12"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
